load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "sudo-touchid_lib",
    srcs = ["main.go"],
    importpath = "ergo/projects/sudo-touchid",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "sudo-touchid",
    embed = [":sudo-touchid_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "sudo-touchid_test",
    srcs = ["main_test.go"],
    embed = [":sudo-touchid_lib"],
)
